# A2A--protocol-basics

./: README.md  lang_main.py  main.py  pyproject.toml  remote_agent_connection.py  response.json  song_client.py  test.py
json_rpc/: agent_tm.py  client.py  run.py  server.py  task_manager.py
json_rpc/modules/: oci_client.py
server/: agent.py  lang_server.py
server/modules/: fuse_config.py
servers/art/: agent.py  agent_executor.py  art_server.py
servers/art/modules/: fuse_config.py  oci_client.py
servers/science/: agent.py  agent_executor.py  science_server.py
servers/science/modules/: fuse_config.py  oci_client.py
src/: agent_hub.py  agent_pool.py  host_agent.py  song_agent.py  song_agent_executor.py  song_server.py
src/modules/: fuse_config.py  oci_client.py
test/: agent_executor.py  hello_server.py  lang_currency_client.py  main.py
